# MAYA-HOUDINI-Plugin

./: README.md
Environment Instruction/: .gitattributes
Houdini Plugin Framework - H20 VS2022/basecode/: CMakeLists.txt  readme.md
Houdini Plugin Framework - H20 VS2022/basecode/src/: LSYSTEMPlugin.C  LSYSTEMPlugin.h
LSystem_C++/: LSystem.cpp  LSystem.h  LSystem.mll  LSystemCmd.cpp  LSystemCmd.h  LSystemGUI.mel  LSystemNode.cpp  LSystemNode.h  MyExe.vcxproj  MyMaya.sln  MyPlugin.vcxproj  MyPlugin.vcxproj.filters  PluginMain.cpp  UpgradeLog.htm  cylinder.cpp  cylinder.h  vec.cpp  vec.h
LSystem_C++/Debug/: LSystemd.exe.recipe
LSystem_C++/Release/: LSystem.exe.recipe  MyPlugin.exp  MyPlugin.lib
LSystem_C++/Release/LSystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LSystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LSystem_C++/x64/Debug/: LSystemMaya.dll.recipe
LSystem_C++/x64/Release/: LSystemMaya.dll.recipe
LSystem_C++/x64/Release/LSystemMaya.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
LSystem_Python/: LSystem.cpp  LSystem.h  LSystem.i  LSystem.sdf  LSystem.sln  LSystem.vcxproj  LSystem.vcxproj.filters  LSystem_wrap.cxx  README.md.txt  menu.mel  randomNode.py  vec.h
LSystem_Python/plants/: flower.txt  simple4.txt
LSystem_Python/x64/Debug/: LSystem.dll.recipe
LSystem_Python/x64/Release/: LSystem.dll.recipe  _LSystem.pyd.recipe
LSystem_Python/x64/Release/LSystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  LSystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
